--- a/thesis.tex
+++ b/thesis.tex
@@ -28,17 +28,17 @@
 
 % 设定文档的基本信息。
 \pkuthssinfo{
-	cthesisname = {博士研究生学位论文}, ethesisname = {Doctor Thesis},
-	ctitle = {测试文档}, etitle = {Test Document},
-	cauthor = {某某},
-	eauthor = {Test},
-	studentid = {0123456789},
-	date = {某年某月},
-	school = {某某学院},
-	cmajor = {某某专业}, emajor = {Some Major},
-	direction = {某某方向},
-	cmentor = {某某教授}, ementor = {Prof.\ Somebody},
-	ckeywords = {其一，其二}, ekeywords = {First, Second}
+	cthesisname = {硕士研究生学位论文}, ethesisname = {Master Thesis},
+	ctitle = {基于深度学习的推荐系统\\技术研究}, etitle = {Deep Learning Biased Recommender System},
+	cauthor = {吕超},
+	eauthor = {Chao Lv},
+	studentid = {1401214348},
+	date = {二零一七年四月},
+	school = {信息科学技术学院},
+	cmajor = {计算机应用技术}, emajor = {Computer Applied Technology},
+	direction = {互联网搜索与挖掘},
+	cmentor = {赵东岩\ 研究员}, ementor = {Prof. Dongyan Zhao},
+	ckeywords = {深度学习，推荐系统}, ekeywords = {Deep Learning, Recommender System}
 }
 % 载入参考文献数据库（注意不要省略“.bib”）。
 \addbibresource{thesis.bib}
