add my papers and modify .gitignore file

--- a/thesis.tex
+++ b/thesis.tex
@@ -85,12 +85,12 @@
 
 	% 以下为正文部分，默认要进行章节编号。
 	\mainmatter
-	% 序言。
-	\include{chap/introduction}
 	% 各章节。
 	\include{chap/chap1}
-	% 结论。
-	\include{chap/conclusion}
+	\include{chap/chap2}
+	\include{chap/chap3}
+	\include{chap/chap4}
+	\include{chap/chap5}
 
 	% 正文中的附录部分。
 	\appendix
