add some content

--- a/thesis.bib
+++ b/thesis.bib
@@ -1,19 +1,17 @@
-@article{test-en,
-	author = {Author},
-	title = {Title},
-	type = {J},
-	journal = {Journal},
-	date = {2014-04-01},
-	language = {english},
+@inproceedings{resnick1994grouplens,
+  title={GroupLens: an open architecture for collaborative filtering of netnews},
+  author={Resnick, Paul and Iacovou, Neophytos and Suchak, Mitesh and Bergstrom, Peter and Riedl, John},
+  booktitle={Proceedings of the 1994 ACM conference on Computer supported cooperative work},
+  pages={175--186},
+  year={1994},
+  organization={ACM}
 }
 
-@article{test-zh,
-	author = {作者},
-	title = {标题},
-	type = {J},
-	journal = {期刊},
-	date = {2014-04-01},
-	language = {chinese},
+@article{mikolov2013efficient,
+  title={Efficient estimation of word representations in vector space},
+  author={Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
+  journal={arXiv preprint arXiv:1301.3781},
+  year={2013}
 }
 
 % vim:ts=4:sw=4
