--- a/thesis.bib
+++ b/thesis.bib
@@ -7,6 +7,28 @@
   organization={ACM}
 }
 
+@article{hinton2006fast,
+  title={A fast learning algorithm for deep belief nets},
+  author={Hinton, Geoffrey E and Osindero, Simon and Teh, Yee-Whye},
+  journal={Neural computation},
+  volume={18},
+  number={7},
+  pages={1527--1554},
+  year={2006},
+  publisher={MIT Press}
+}
+
+@article{lecun1989backpropagation,
+  title={Backpropagation applied to handwritten zip code recognition},
+  author={LeCun, Yann and Boser, Bernhard and Denker, John S and Henderson, Donnie and Howard, Richard E and Hubbard, Wayne and Jackel, Lawrence D},
+  journal={Neural computation},
+  volume={1},
+  number={4},
+  pages={541--551},
+  year={1989},
+  publisher={MIT Press}
+}
+
 @article{mikolov2013efficient,
   title={Efficient estimation of word representations in vector space},
   author={Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
@@ -14,4 +36,127 @@
   year={2013}
 }
 
-% vim:ts=4:sw=4
+@inproceedings{sarwar2001item,
+  title={Item-based collaborative filtering recommendation algorithms},
+  author={Sarwar, Badrul and Karypis, George and Konstan, Joseph and Riedl, John},
+  booktitle={Proceedings of the 10th international conference on World Wide Web},
+  pages={285--295},
+  year={2001},
+  organization={ACM}
+}
+
+@article{koren2009matrix,
+  title={Matrix factorization techniques for recommender systems},
+  author={Koren, Yehuda and Bell, Robert and Volinsky, Chris},
+  journal={Computer},
+  volume={42},
+  number={8},
+  year={2009},
+  publisher={IEEE}
+}
+
+@inproceedings{le2014distributed,
+  title={Distributed Representations of Sentences and Documents.},
+  author={Le, Quoc V and Mikolov, Tomas},
+  booktitle={ICML},
+  volume={14},
+  pages={1188--1196},
+  year={2014}
+}
+
+@article{chen2011feature,
+  title={Feature-based matrix factorization},
+  author={Chen, Tianqi and Zheng, Zhao and Lu, Qiuxia and Zhang, Weinan and Yu, Yong},
+  journal={arXiv preprint arXiv:1109.2271},
+  year={2011}
+}
+
+@inproceedings{lee2001algorithms,
+  title={Algorithms for non-negative matrix factorization},
+  author={Lee, Daniel D and Seung, H Sebastian},
+  booktitle={Advances in neural information processing systems},
+  pages={556--562},
+  year={2001}
+}
+
+@inproceedings{salakhutdinov2007probabilistic,
+  title={Probabilistic Matrix Factorization.},
+  author={Salakhutdinov, Ruslan and Mnih, Andriy},
+  booktitle={Nips},
+  volume={1},
+  number={1},
+  pages={2--1},
+  year={2007}
+}
+
+@inproceedings{zhuang2013fast,
+  title={A fast parallel SGD for matrix factorization in shared memory systems},
+  author={Zhuang, Yong and Chin, Wei-Sheng and Juan, Yu-Chin and Lin, Chih-Jen},
+  booktitle={Proceedings of the 7th ACM conference on Recommender systems},
+  pages={249--256},
+  year={2013},
+  organization={ACM}
+}
+
+@inproceedings{rendle2010factorization,
+  title={Factorization machines},
+  author={Rendle, Steffen},
+  booktitle={Data Mining (ICDM), 2010 IEEE 10th International Conference on},
+  pages={995--1000},
+  year={2010},
+  organization={IEEE}
+}
+
+@article{rendle2012factorization,
+  title={Factorization machines with libfm},
+  author={Rendle, Steffen},
+  journal={ACM Transactions on Intelligent Systems and Technology (TIST)},
+  volume={3},
+  number={3},
+  pages={57},
+  year={2012},
+  publisher={ACM}
+}
+
+@inproceedings{zheng2016neural,
+  title={A neural autoregressive approach to collaborative filtering},
+  author={Zheng, Yin and Tang, Bangsheng and Ding, Wenkui and Zhou, Hanning},
+  booktitle={Proceedings of the 33nd International Conference on Machine Learning},
+  pages={764--773},
+  year={2016}
+}
+
+@article{strub2016hybrid,
+  title={Hybrid Collaborative Filtering with Autoencoders},
+  author={Strub, Florian and Mary, J{\'e}r{\'e}mie and Gaudel, Romaric},
+  journal={arXiv preprint arXiv:1603.00806},
+  year={2016}
+}
+
+
+@inproceedings{sigurbjornsson2008flickr,
+  title={Flickr tag recommendation based on collective knowledge},
+  author={Sigurbj{\"o}rnsson, B{\"o}rkur and Van Zwol, Roelof},
+  booktitle={Proceedings of the 17th international conference on World Wide Web},
+  pages={327--336},
+  year={2008},
+  organization={ACM}
+}
+
+@inproceedings{rendle2010pairwise,
+  title={Pairwise interaction tensor factorization for personalized tag recommendation},
+  author={Rendle, Steffen and Schmidt-Thieme, Lars},
+  booktitle={Proceedings of the third ACM international conference on Web search and data mining},
+  pages={81--90},
+  year={2010},
+  organization={ACM}
+}
+
+@inproceedings{wang2015relational,
+  title={Relational Stacked Denoising Autoencoder for Tag Recommendation.},
+  author={Wang, Hao and Shi, Xingjian and Yeung, Dit-Yan},
+  booktitle={AAAI},
+  pages={3052--3058},
+  year={2015}
+}
+
