--- a/thesis.tex
+++ b/thesis.tex
@@ -38,7 +38,7 @@
 	cmajor = {计算机应用技术}, emajor = {Computer Applied Technology},
 	direction = {互联网搜索与挖掘},
 	cmentor = {赵东岩\ 研究员}, ementor = {Prof. Dongyan Zhao},
-	ckeywords = {深度学习，推荐系统}, ekeywords = {Deep Learning, Recommender System}
+	ckeywords = {深度学习，推荐系统，特征表示}, ekeywords = {Deep Learning, Recommender System, Feature Representation}
 }
 % 载入参考文献数据库（注意不要省略“.bib”）。
 \addbibresource{thesis.bib}
