--- a/thesis.bib
+++ b/thesis.bib
@@ -160,3 +160,198 @@
   year={2015}
 }
 
+@inproceedings{bennett2007netflix,
+  title={The netflix prize},
+  author={Bennett, James and Lanning, Stan and others},
+  booktitle={Proceedings of KDD cup and workshop},
+  volume={2007},
+  pages={35},
+  year={2007},
+  organization={New York, NY, USA}
+}
+
+@book{ricci2011introduction,
+  title={Introduction to recommender systems handbook},
+  author={Ricci, Francesco and Rokach, Lior and Shapira, Bracha},
+  year={2011},
+  publisher={Springer}
+}
+
+@incollection{pazzani2007content,
+  title={Content-based recommendation systems},
+  author={Pazzani, Michael J and Billsus, Daniel},
+  booktitle={The adaptive web},
+  pages={325--341},
+  year={2007},
+  publisher={Springer}
+}
+
+@article{trewin2000knowledge,
+  title={Knowledge-based recommender systems},
+  author={Trewin, Shari},
+  journal={Encyclopedia of library and information science},
+  volume={69},
+  number={Supplement 32},
+  pages={180},
+  year={2000}
+}
+
+@article{burke2002hybrid,
+  title={Hybrid recommender systems: Survey and experiments},
+  author={Burke, Robin},
+  journal={User modeling and user-adapted interaction},
+  volume={12},
+  number={4},
+  pages={331--370},
+  year={2002},
+  publisher={Springer}
+}
+
+@inproceedings{wang2011collaborative,
+  title={Collaborative topic modeling for recommending scientific articles},
+  author={Wang, Chong and Blei, David M},
+  booktitle={Proceedings of the 17th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={448--456},
+  year={2011},
+  organization={ACM}
+}
+
+@inproceedings{ganu2009beyond,
+  title={Beyond the Stars: Improving Rating Predictions using Review Text Content.},
+  author={Ganu, Gayatree and Elhadad, Noemie and Marian, Am{\'e}lie},
+  booktitle={WebDB},
+  volume={9},
+  pages={1--6},
+  year={2009},
+  organization={Citeseer}
+}
+
+@inproceedings{le2014distributed,
+  title={Distributed Representations of Sentences and Documents.},
+  author={Le, Quoc V and Mikolov, Tomas},
+  booktitle={ICML},
+  volume={14},
+  pages={1188--1196},
+  year={2014}
+}
+
+@article{bojanowski2016enriching,
+  title={Enriching word vectors with subword information},
+  author={Bojanowski, Piotr and Grave, Edouard and Joulin, Armand and Mikolov, Tomas},
+  journal={arXiv preprint arXiv:1607.04606},
+  year={2016}
+}
+
+@inproceedings{socher2013recursive,
+  title={Recursive deep models for semantic compositionality over a sentiment treebank},
+  author={Socher, Richard and Perelygin, Alex and Wu, Jean Y and Chuang, Jason and Manning, Christopher D and Ng, Andrew Y and Potts, Christopher and others},
+  booktitle={Proceedings of the conference on empirical methods in natural language processing (EMNLP)},
+  volume={1631},
+  pages={1642},
+  year={2013},
+  organization={Citeseer}
+}
+
+@article{li2016deep,
+  title={Deep reinforcement learning for dialogue generation},
+  author={Li, Jiwei and Monroe, Will and Ritter, Alan and Galley, Michel and Gao, Jianfeng and Jurafsky, Dan},
+  journal={arXiv preprint arXiv:1606.01541},
+  year={2016}
+}
+
+@article{bahdanau2014neural,
+  title={Neural machine translation by jointly learning to align and translate},
+  author={Bahdanau, Dzmitry and Cho, Kyunghyun and Bengio, Yoshua},
+  journal={arXiv preprint arXiv:1409.0473},
+  year={2014}
+}
+
+@article{bengio2009learning,
+  title={Learning deep architectures for AI},
+  author={Bengio, Yoshua and others},
+  journal={Foundations and trends{\textregistered} in Machine Learning},
+  volume={2},
+  number={1},
+  pages={1--127},
+  year={2009},
+  publisher={Now Publishers, Inc.}
+}
+
+@article{silver2016mastering,
+  title={Mastering the game of Go with deep neural networks and tree search},
+  author={Silver, David and Huang, Aja and Maddison, Chris J and Guez, Arthur and Sifre, Laurent and Van Den Driessche, George and Schrittwieser, Julian and Antonoglou, Ioannis and Panneershelvam, Veda and Lanctot, Marc and others},
+  journal={Nature},
+  volume={529},
+  number={7587},
+  pages={484--489},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+
+@inproceedings{salakhutdinov2007restricted,
+  title={Restricted Boltzmann machines for collaborative filtering},
+  author={Salakhutdinov, Ruslan and Mnih, Andriy and Hinton, Geoffrey},
+  booktitle={Proceedings of the 24th international conference on Machine learning},
+  pages={791--798},
+  year={2007},
+  organization={ACM}
+}
+
+@inproceedings{phung2009ordinal,
+  title={Ordinal Boltzmann machines for collaborative filtering},
+  author={Phung, Dinh Q and Venkatesh, Svetha and others},
+  booktitle={Proceedings of the Twenty-fifth Conference on Uncertainty in Artificial Intelligence},
+  pages={548--556},
+  year={2009},
+  organization={AUAI Press}
+}
+
+@inproceedings{sedhain2015autorec,
+  title={Autorec: Autoencoders meet collaborative filtering},
+  author={Sedhain, Suvash and Menon, Aditya Krishna and Sanner, Scott and Xie, Lexing},
+  booktitle={Proceedings of the 24th International Conference on World Wide Web},
+  pages={111--112},
+  year={2015},
+  organization={ACM}
+}
+
+@article{strub2016hybrid,
+  title={Hybrid Collaborative Filtering with Autoencoders},
+  author={Strub, Florian and Mary, J{\'e}r{\'e}mie and Gaudel, Romaric},
+  journal={arXiv preprint arXiv:1603.00806},
+  year={2016}
+}
+
+@inproceedings{wang2015collaborative,
+  title={Collaborative deep learning for recommender systems},
+  author={Wang, Hao and Wang, Naiyan and Yeung, Dit-Yan},
+  booktitle={Proceedings of the 21th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  pages={1235--1244},
+  year={2015},
+  organization={ACM}
+}
+
+@inproceedings{wang2016collaborative,
+  title={Collaborative recurrent autoencoder: Recommend while learning to fill in the blanks},
+  author={Wang, Hao and Xingjian, SHI and Yeung, Dit-Yan},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={415--423},
+  year={2016}
+}
+
+@inproceedings{van2013deep,
+  title={Deep content-based music recommendation},
+  author={Van den Oord, Aaron and Dieleman, Sander and Schrauwen, Benjamin},
+  booktitle={Advances in neural information processing systems},
+  pages={2643--2651},
+  year={2013}
+}
+
+@inproceedings{wang2014improving,
+  title={Improving content-based and hybrid music recommendation using deep learning},
+  author={Wang, Xinxi and Wang, Ye},
+  booktitle={Proceedings of the 22nd ACM international conference on Multimedia},
+  pages={627--636},
+  year={2014},
+  organization={ACM}
+}
