--- a/thesis.bib
+++ b/thesis.bib
@@ -355,3 +355,13 @@
   year={2014},
   organization={ACM}
 }
+
+@inproceedings{salakhutdinov2007probabilistic,
+  title={Probabilistic Matrix Factorization.},
+  author={Salakhutdinov, Ruslan and Mnih, Andriy},
+  booktitle={Nips},
+  volume={1},
+  number={1},
+  pages={2--1},
+  year={2007}
+}
