--- a/thesis.bib
+++ b/thesis.bib
@@ -365,3 +365,13 @@
   pages={2--1},
   year={2007}
 }
+
+@inproceedings{hinton1986learning,
+  title={Learning distributed representations of concepts},
+  author={Hinton, Geoffrey E},
+  booktitle={Proceedings of the eighth annual conference of the cognitive science society},
+  volume={1},
+  pages={12},
+  year={1986},
+  organization={Amherst, MA}
+}
