--- a/thesis.bib
+++ b/thesis.bib
@@ -375,3 +375,10 @@
   year={1986},
   organization={Amherst, MA}
 }
+
+@article{hinton2012improving,
+  title={Improving neural networks by preventing co-adaptation of feature detectors},
+  author={Hinton, Geoffrey E and Srivastava, Nitish and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan R},
+  journal={arXiv preprint arXiv:1207.0580},
+  year={2012}
+}
