--- a/thesis.tex
+++ b/thesis.tex
@@ -29,7 +29,7 @@
 % 设定文档的基本信息。
 \pkuthssinfo{
 	cthesisname = {硕士研究生学位论文}, ethesisname = {Master Thesis},
-	ctitle = {基于深度学习的推荐系统\\技术研究}, etitle = {Deep Learning Biased Recommender System},
+	ctitle = {基于深度学习的推荐系统\\技术研究}, etitle = {Deep Learning Based Recommender System},
 	cauthor = {吕超},
 	eauthor = {Chao Lv},
 	studentid = {1401214348},
