change month info

--- a/thesis.tex
+++ b/thesis.tex
@@ -33,7 +33,7 @@
 	cauthor = {吕超},
 	eauthor = {Chao Lv},
 	studentid = {1401214348},
-	date = {二零一七年四月},
+	date = {二零一七年五月},
 	school = {信息科学技术学院},
 	cmajor = {计算机应用技术}, emajor = {Computer Applied Technology},
 	direction = {互联网搜索与挖掘},
